--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -1,4 +1,4 @@
-name: CI Joe
+name: CI
 
 on:
   pull_request:
@@ -7,6 +7,15 @@ on:
   push:
     branches:
     - master
+  
+  workflow_dispatch:
+    inputs:
+      myFirstInput:
+        description: 'First Input'     
+        required: true
+        default: 'code to cloud!'
+      mySecondInput:
+        description: 'Second Input'  
 
 jobs:
   Build:
@@ -28,3 +37,7 @@ jobs:
         npm install
         npm run build --if-present
         npm test
+    - name: Testing Manual Inputs
+      run: |
+        echo "First Input: ${{ github.event.inputs.myFirstInput }}"
+        echo "Second Input: ${{ github.event.inputs.mySecondInput }}" 
