--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -5,6 +5,15 @@ on:
     branches:
     - master
 
+  workflow_dispatch:
+    inputs:
+      myFirstInput:
+        description: 'First Input'     
+        required: true
+        default: 'code to cloud!'
+      mySecondInput:
+        description: 'Second Input'  
+
 jobs:
   Build:
     name: Test this Demo
