--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -4,6 +4,15 @@ on:
   pull_request:
     branches:
     - master
+
+  workflow_dispatch:
+    inputs:
+      myFirstInput:
+        description: 'First Input'     
+        required: true
+        default: 'code to cloud!'
+      mySecondInput:
+        description: 'Second Input'
         
 jobs:
   Build:
@@ -27,3 +36,8 @@ jobs:
         npm install
         npm run build --if-present
         npm test
+        
+    - name: Testing Manual Inputs
+      run: |
+        echo "First Input: ${{ github.event.inputs.myFirstInput }}"
+        echo "Second Input: ${{ github.event.inputs.mySecondInput }}" 
